class 15 commit to blogspot branches

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Here is our blog</h1>
-    <p>First paragraph</p>
+    <div id="container">
+        <div id="post">
+            <h1>This is the fancy and interesting title of our project</h1>
+            <p>And this is our first paragraph where we are going to explain about branches</p>
+        </div>
+    </div>
 </body>
 </html>
