class 15 we added our header

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Header
+        </div>
         <div id="post">
             <h1>This is the fancy and interesting title of our project</h1>
             <p>And this is our first paragraph where we are going to explain about branches</p>
