--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Header
+            Hyperblog
+            <span id="tagline">Your trust blog</span>
         </div>
         <div id="post">
             <h1>This is the fancy and interesting title of our project</h1>
