--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>This is the fancy and interesting title of our project</h1>
             <p>And this is our first paragraph where we are going to explain about branches</p>
+            <p>Blogs are the best way to share information and ideas.</p>
         </div>
     </div>
 </body>
