--- a/blogpost.html
+++ b/blogpost.html
@@ -13,12 +13,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Your trust blog</span>
+            <span id="tagline">Your trust blog from master branch</span>
         </div>
         <div id="post">
             <h1>This is the fancy and interesting title of our project</h1>
             <p>And this is our first paragraph where we are going to explain about branches</p>
             <p>Blogs are the best way to share information and ideas.</p>
+            <p>Suscribe and like</p>
         </div>
     </div>
 </body>
